--- a/HelloDoc/Views/AdminDash/Provider.cshtml
+++ b/HelloDoc/Views/AdminDash/Provider.cshtml
@@ -7,6 +7,54 @@
 
 
 @* --------------------- *@
+@* --------------------- *@
+
+<div class="modal fade" id="ContactProviderModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header bg-info">
+                <h5 class="modal-title text-white" id="exampleModalLongTitle">Contact Your Provider</h5>
+                <a data-bs-dismiss="modal">
+                    <svg height="20px" id="Layer_1" style="enable-background:new 0 0 512 512;" fill="white" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M443.6,387.1L312.4,255.4l131.5-130c5.4-5.4,5.4-14.2,0-19.6l-37.4-37.6c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4  L256,197.8L124.9,68.3c-2.6-2.6-6.1-4-9.8-4c-3.7,0-7.2,1.5-9.8,4L68,105.9c-5.4,5.4-5.4,14.2,0,19.6l131.5,130L68.4,387.1  c-2.6,2.6-4.1,6.1-4.1,9.8c0,3.7,1.4,7.2,4.1,9.8l37.4,37.6c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1L256,313.1l130.7,131.1  c2.7,2.7,6.2,4.1,9.8,4.1c3.5,0,7.1-1.3,9.8-4.1l37.4-37.6c2.6-2.6,4.1-6.1,4.1-9.8C447.7,393.2,446.2,389.7,443.6,387.1z" /></svg>
+                </a>
+            </div>
+            <form id="ContactProviderModalSubmit">
+                <div class="modal-body">
+                    <span>Choose communication to send message.</span>
+                    <div class="modal-flex  justify-content-center my-3">
+                        <input type="number" id="providerID" hidden />
+
+                        <div class="form-check">
+                            <input  type="radio" class="form-check-input border" name="radioForprovider" value="1" id="radio1">Email
+                            <label class="form-check-label" for="radio1"></label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input border" name="radioForprovider" value="2" id="radio2">SMS
+                            <label class="form-check-label" for="radio2"></label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input border" name="radioForprovider" value="3" id="radio3">Both
+                            <label class="form-check-label" for="radio3"></label>
+                        </div>
+
+                        <div class="form-floating mt-3 temp">
+                            <textarea style="height: 100px;" type="text" class="form-control inputs" id="messageForProvider"></textarea>
+                            <label for="messageForProvider" class="input_labels">Message</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" id="contactProviderSubmitBtn" class="btn btn-info text-white" data-bs-dismiss="modal">Submit</button>
+                    <button type="reset" class="btn btn-outline-info cancel-btn">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+@* --------------------- *@
 <div class="container-fluid  bg-body-secondary ">
     <div class="container">
     <div class="justify-content-between d-flex  container-fluid mb-2 position-relative ">
