--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -343,7 +343,7 @@
 
 @* ---------------------------------------------------------- *@
 <div class="mb-5">
-    <nav id="pagination" aria-label="Page navigation " class="mb-3">
+    <nav id="pagination" aria-label="Page navigation " class="pb-3">
         <ul class="pagination w-100  d-flex justify-content-center">
             @for (int b = 1; b <= ViewBag.TotalPages; b++)
             {
