--- a/HelloDoc/Views/AdminDash/_ProviderTable.cshtml
+++ b/HelloDoc/Views/AdminDash/_ProviderTable.cshtml
@@ -15,7 +15,7 @@
             {
                 <tr>
                     <td scope="row">
-                        <input id="NotifyBox" type="checkbox" onchange="locationchange(@item.physicianid)" class="form-check-input" name="fileIds" @(item.OnCallStaus[0] ? "checked" : "")>
+                        <input id="NotifyBox_@item.physicianid" type="checkbox" onchange="locationchange(@item.physicianid)" class="form-check-input" name="fileIds" @(item.OnCallStaus[0] ? "checked" : "")>
                     </td>
                     <td scope="row">@item.Name</td>
                     <td scope="row">@item.Role</td>
@@ -40,7 +40,7 @@
                     </td>
                     <td scope="row">
                         <div class="d-flex justify-content-center">
-                            <button class="btn btn-outline-info rounded me-2" onclick="sendEmailModal(@item.physicianid)">Contact</button>
+                            <button class="btn btn-outline-info rounded me-2" onclick="togglemodal(this)" data-physicianid="@item.physicianid">Contact</button>
                             <a asp-action="PhysicianProfile" asp-route-id="@item.physicianid" class="btn btn-outline-info rounded">Edit</a>
                         </div>
                     </td>
@@ -52,9 +52,21 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-    
+    function togglemodal(btn) {
+
+
+        const myModal = document.getElementById("ContactProviderModal");
+        var bsModal = new bootstrap.Modal(myModal);
+        bsModal.show();
+
+        const physicianid = btn.getAttribute('data-physicianid');
+        document.getElementById('physicianid').value = physicianid;
+     
+
+    }
+
     function locationchange(id){
-        var boxid = $("#NotifyBox");
+        var boxid = $("#NotifyBox_" + id);
         var isChecked = boxid.is(':checked');
         $.ajax({
            type: 'Post',
