--- a/HelloDoc/Views/AdminDash/Provider.cshtml
+++ b/HelloDoc/Views/AdminDash/Provider.cshtml
@@ -63,7 +63,7 @@
             <h3> Provider Information </h3>
         </div>
         <div>
-            <a asp-action="AdminDashboard" class="btn btn-outline-info mt-3"> ❮  Back </a>
+            <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
         </div>
     </div>
     <div class="card border-0 shadow p-4 mb-5 rounded">
