--- a/HelloDoc/Views/AdminDash/UserAccess.cshtml
+++ b/HelloDoc/Views/AdminDash/UserAccess.cshtml
@@ -5,9 +5,6 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-
-
-    @* ---------------------------------- *@
     <div class="container-fluid  bg-body-secondary">
     <div class="container " style="height:80vh !important">
             <div class="justify-content-between d-flex  container-fluid mb-2 position-relative ">
@@ -15,7 +12,7 @@
                     <h3> User Access </h3>
                 </div>
                 <div>
-                    <a asp-action="AdminDashboard" class="btn btn-outline-info mt-3"> ❮  Back </a>
+                    <a asp-action="AdminDash" class="btn btn-outline-info mt-3"> ❮  Back </a>
                 </div>
             </div>
             <div class="card border-0 shadow p-4 mb-5 rounded">
