--- a/HelloDoc/Views/AdminDash/PhysicianScheduling.cshtml
+++ b/HelloDoc/Views/AdminDash/PhysicianScheduling.cshtml
@@ -16,24 +16,25 @@
 
     <div class="p-0 m-0 d-flex justify-content-between">
         <div class="d-flex border border-secondary  rounded align-items-center my-2 col-3">
-				<select class="form-control shadow-none border-0" id="SelectedRegion" name="SelectedStateId">
+				<select class="form-control shadow-none border-0" id="SelectedRegion"  name="SelectedStateId">
 					<option value="0">All</option>
 					<option value="1">alaska</option>
 					<option value="2">MaryLand</option>
 					<option value="3">NewYork</option>
 					<option value="4">Virginia</option>
             </select>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down me-2" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708" />
-            </svg>
         </div>
         <div class="d-flex mr-0 py-2 justify-content-end">
-				<button class="btn btn-info mx-2 shadow-none" id="providerBtn" style="width:fit-content">
-                <span>Providers On Call</span>
-            </button>
-				<button class="btn btn-info mx-2 shadow-none" id="adminBtn" style="width:fit-content">
-                <span>Shift for review</span>
-            </button>
+				<a asp-action="MdOnCall">
+					<button class="btn btn-info mx-2 shadow-none" id="providerBtn" style="width:fit-content">
+						<span>Providers On Call</span>
+					</button>
+				</a>
+				<a asp-action="ReviewShift">
+					<button class="btn btn-info mx-2 shadow-none" id="adminBtn" style="width:fit-content">
+						<span>Shift for review</span>
+					</button>
+				</a>
 				<button class="btn btn-info mx-2 shadow-none" data-bs-toggle="modal" data-bs-target="#createShiftModal" id="adminBtn" style="width:fit-content">
                 <span>Add New Shift</span>
             </button>
@@ -137,7 +138,7 @@
 				schedulerLicenseKey: 'GPL-My-Project-Is-Open-Source',
 				themeSystem: 'bootstrap5',
 				headerToolbar: false,
-				initialView: 'resourceTimelineDay',
+				initialView: 'dayGridMonth',
 				dayMaxEvents: 4,
 				editable:true,
 				views: {
