business edit and partners

--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -132,10 +132,12 @@
                 </span>
             </button>
         </a>
+        <a asp-action="Export">
             <button type="button" class="btn btn-info  text-white me-2">
-            <i class="bi bi-arrow-up-right "></i>
-            <span class="d-none d-xl-inline ">Export</span>
-        </button>
+                <i class="bi bi-arrow-up-right "></i>
+                <span class="d-none d-xl-inline ">Export</span>
+            </button>
+        </a>
             <button type="button" class="btn btn-info  text-white me-2">
             <i class="bi bi-box-arrow-up-right"></i><span class="d-none d-xl-inline">
                 Export
