--- a/HelloDoc/Views/AdminDash/AdminProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminProfile.cshtml
@@ -5,11 +5,11 @@
 }
 
 
-
-<div class="container bg-gradient px-0 backbtn d-flex align-items-center my-4 justify-content-between">
+<div class="container-fluid bg-body-secondary ">
+<div class="container bg-body-secondary px-0 py-4 backbtn d-flex align-items-center py-3 justify-content-between">
 
     <h4 class="text-body align-middle my-0 ">My Profile</h4>
-    <a class="p-2 border text-decoration-none border-info rounded bg-transparent">
+    <a class="p-2 border text-decoration-none border-info rounded bg-body-secondary">
         <svg xmlns="http://www.w3.org/2000/svg"
              width="16"
              height="16"
@@ -22,7 +22,7 @@
         <span class="mx-2 text-info">Back</span>
     </a>
 </div>
-<div class="container p-sm-3 p-1 my-3  shadow rounded-3">
+<div class="container p-sm-3 p-1 my-3  shadow rounded-3 bg-white">
     <form class="form-floating" method="post" asp-action="AccountInformation" asp-controller="AdminDash">
         <div class="row gx-4">
             <h4 class="text-body">Account Information</h4>
@@ -219,6 +219,7 @@
 </form>
             </div>
         </div>
+</div>
 </div>
 
 
