--- a/HelloDoc/Views/AdminDash/_ReviewShiftPartial.cshtml
+++ b/HelloDoc/Views/AdminDash/_ReviewShiftPartial.cshtml
@@ -4,7 +4,7 @@
 
         <thead class="table-secondary text-center">
             <tr>
-                <th scope="col"><input type="checkbox"  id="main" /></th>
+                <th scope="col"><input type="checkbox" value="0" id="main" /></th>
                 <th scope="col">Staff</th>
                 <th scope="col">Day</th>
                 <th scope="col">Time</th>
