folder of partner and recordmenu export and export all

--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -132,13 +132,13 @@
                 </span>
             </button>
         </a>
-        <a asp-action="Export">
-            <button type="button" class="btn btn-info  text-white me-2">
+    
+            <button type="button" class="btn btn-info  text-white me-2" id="exportExcleFile">
                 <i class="bi bi-arrow-up-right "></i>
-                <span class="d-none d-xl-inline ">Export</span>
+                <span class="d-none d-xl-inline" >Export</span>
             </button>
-        </a>
-            <button type="button" class="btn btn-info  text-white me-2">
+
+        <button type="button" class="btn btn-info  text-white me-2" id="exportall">
             <i class="bi bi-box-arrow-up-right"></i><span class="d-none d-xl-inline">
                 Export
                 All
