--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin="" />
@@ -117,8 +119,18 @@
                             <li><a asp-action="AccountAccess" class="dropdown-item">Account Access</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link  @(ViewContext.ActionDescriptor.RouteValues["action"] == "Records" ? "active" : "")">Records</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Records" || ViewContext.ActionDescriptor.RouteValues["action"] == "CreateProviderAccount"
+                        || ViewContext.ActionDescriptor.RouteValues["action"] == "PhysicianScheduling"? "active" : "")" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Records
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-action="SearchRecords" class="dropdown-item ">Search Records</a></li>
+                            <li><a class="dropdown-item">Email Logs</a></li>
+                            <li><a class="dropdown-item">SMS Logs</a></li>
+                            <li><a asp-action="PatientHistory" class="dropdown-item">Patient Records</a></li>
+                            <li><a asp-action="BlockHistory" class="dropdown-item">Blocked History</a></li>
+                        </ul>
                     </li>
 
                 </ul>
@@ -289,7 +301,17 @@
             });
 
 
+            // -------------------------
+            $("#exportExcleFile, #exportall").click(function () {
+                let downloadUrl = `/AdminDash/ExportRequests?currentstatus=${currentstatus}`;
 
+                if ($(this).attr("id") === "exportExcleFile") {
+                    downloadUrl += `&pagesize=${pagesize}&currentpage=${currentpage}`;
+                }
+
+                window.location.href = downloadUrl;
+            });
+            // -------------------------
 
             //-------------------on click functionality------------------------------
 
