--- a/HelloDoc/Views/AdminDash/ProviderLocation.cshtml
+++ b/HelloDoc/Views/AdminDash/ProviderLocation.cshtml
@@ -1,17 +1,40 @@
-﻿
-@{
-    ViewData["Title"] = "ProviderLocation";
+﻿﻿@{
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
+
 <div id="map" style="height: 90vh; z-index: 1;"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-    var map = L.map('map').setView([23.0463762, 72.525568], 13);
+    $(document).ready(function () {
+        var map = L.map('map', {
+            center: [21.0000, 78.0000], // india coordinates
+            zoom: 5,
+            zoomControl: true,
+            trackResize: true,
+        });
+        $.ajax({
+            type: "POST",
+            url: '/AdminDash/GetPhysicianLocation',
+            success: function (data) {
+                var result = JSON.stringify(data);
+                for (var i = 0; i < result.length; ++i) {
+                    var popup = '<b>Name:</b> ' + data[i].physicianName +
+                        '<br/><b>Latitude:</b> ' + data[i].latitude +
+                        '<br/><b>Longitude:</b> ' + data[i].longitude;
 
-    L.tileLayer('https://api.maptiler.com/tiles/satellite-v2/{z}/{x}/{y}.jpg?key=LhIRhyj08thbIQhxBBWf', {
-        maxZoom: 19,
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-    }).addTo(map);
-    var marker = L.marker([23.0350251, 72.5004278]).addTo(map);
+                    L.marker([data[i].latitude, data[i].longitude])
+                        .bindPopup(popup)
+                        .addTo(map);
+                }
+            },
+            error: function (xhr) {
+                alert("Error has occurred..");
+            }
+        });
 
-
+        L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+            attribution: '© <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+    });
 </script>
+
